--- a/index.html
+++ b/index.html
@@ -154,14 +154,16 @@
 
   <div class="team-grid">
     <div class="team-member">
-      <img src="https://randomuser.me/api/portraits/men/31.jpg" alt="Vivek Kumar">
+      <img src="
+https://vivekgpta.github.io/Samiti/images/vivek.jpg" alt="Vivek Kumar">
       <h3>Vivek Kumar</h3>
       <p class="role">Backend Developer</p>
       <p class="roll">Roll No: 0115CS221144</p>
     </div>
 
     <div class="team-member">
-      <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="Aman Abhishek Mishra">
+      <img src="
+https://scontent-bom5-1.cdninstagram.com/v/t51.29350-15/416265969_920231989830376_5638164227710179050_n.webp?stp=dst-jpg_e35_p240x240_tt6&_nc_cat=100&ig_cache_key=MzI3Mjc3ODQ0MzYzMjU0MDkwNA%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTgwMC5zZHIuZGVmYXVsdF9pbWFnZS5DMyJ9&_nc_ohc=Ioez6uRsgQkQ7kNvwGb_rge&_nc_oc=AdlbKQHMI7EnQYYIWU6HEd4q8OUCZGorqhYttHgcwwr01W11XAdHUO5-DmDNiuwdFoU&_nc_zt=23&_nc_ht=scontent-bom5-1.cdninstagram.com&_nc_gid=orA5f7IjmPln6OME2uRBGA&oh=00_Afg5yFYrrw0A_cI-ddZeUvsPlc6MdIuT3qLSbDc3eh45WA&oe=692346B9" alt="Aman Abhishek Mishra">
       <h3>Aman Mishra</h3>
       <p class="role">Frontend Developer</p>
       <p class="roll">Roll No: 0115CS221068</p>
@@ -175,7 +177,8 @@
     </div>
 
     <div class="team-member guide">
-      <img src="https://randomuser.me/api/portraits/men/18.jpg" alt="Anurag Shrivastava">
+      <img src="
+https://i1.rgstatic.net/ii/profile.image/11431281288994948-1730963144188_Q128/Anurag-Shrivastava-9.jpg" alt="Anurag Shrivastava">
       <h3>Anurag Shrivastava</h3>
       <p class="role">Project Guide</p>
       <p class="roll">Assistant Professor, NIIST Bhopal</p>
@@ -193,3 +196,4 @@
 
 
 </html>
+
