--- a/index.html
+++ b/index.html
@@ -175,7 +175,12 @@ https://scontent-bom5-1.cdninstagram.com/v/t51.29350-15/416265969_92023198983037
       <p class="role">Database Engineer</p>
       <p class="roll">Roll No: 0115CS221013</p>
     </div>
-
+<div class="team-member">
+      <img src="https://randomuser.me/api/portraits/men/72.jpg" alt="Aditya Dwivedi">
+      <h3>AAyush Gupta</h3>
+      <p class="role">Research & Testing</p>
+      <p class="roll">Roll No: 0115CS221032</p>
+    </div>
     <div class="team-member guide">
       <img src="
 https://i1.rgstatic.net/ii/profile.image/11431281288994948-1730963144188_Q128/Anurag-Shrivastava-9.jpg" alt="Anurag Shrivastava">
@@ -196,4 +201,5 @@ https://i1.rgstatic.net/ii/profile.image/11431281288994948-1730963144188_Q128/An
 
 
 </html>
+
 
