--- a/index.html
+++ b/index.html
@@ -170,13 +170,15 @@ https://scontent-bom5-1.cdninstagram.com/v/t51.29350-15/416265969_92023198983037
     </div>
 
     <div class="team-member">
-      <img src="https://randomuser.me/api/portraits/men/72.jpg" alt="Aditya Dwivedi">
+      <img src="
+https://tse2.mm.bing.net/th/id/OIP.ed0RqUUqkqGszO7DikXhagAAAA?pid=Api&H=160&W=160" alt="Aditya Dwivedi">
       <h3>Aditya Dwivedi</h3>
       <p class="role">Database Engineer</p>
       <p class="roll">Roll No: 0115CS221013</p>
     </div>
 <div class="team-member">
-      <img src="https://randomuser.me/api/portraits/men/72.jpg" alt="Aditya Dwivedi">
+      <img src="
+https://tse1.mm.bing.net/th/id/OIP.rcmXeqCUOiCg54dfU4v9tgHaHa?pid=Api&H=160&W=160" alt="Aditya Dwivedi">
       <h3>AAyush Gupta</h3>
       <p class="role">Research & Testing</p>
       <p class="roll">Roll No: 0115CS221032</p>
@@ -201,5 +203,6 @@ https://i1.rgstatic.net/ii/profile.image/11431281288994948-1730963144188_Q128/An
 
 
 </html>
+
 
 
